<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name">ODK Tables</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="set">Set</string>
	<string name="xaxis">X-Axis</string>
	<string name="yaxis">Y-Axis</string>
	<string name="button_search">Search</string>
	<string name="box_stem_settings_title">Box-Stem Graph Settings</string>
	<string name="impossible_box_stem">At least one number column is required for box-stem graphs.</string>
	<string name="table_files_authority">org.opendatakit.tables.tablefilesauthority</string>
	<string name="user_defined_listview_name_label">Name</string>
	<string name="file">File</string>
	<string name="no_table_message">Use + submenu to add a new table</string>
	<string name="no_list_view_message">Use + submenu to add a new list view</string>
	<string name="user_defined_graphview_name_label">Name</string>
	<string name="app_defined_graphtype_label">Graph Type</string>
	<string name="name_of_new_table">Name of New Table</string>
	<string name="comparison_type">Comparison Type</string>
	<string name="value">Value</string>
	<string name="text_color">Text Color</string>
	<string name="background_color">Background Color</string>
	<string name="column">Column</string>
	<string name="sync_state_equals_rest_message">Was up to date after last sync.</string>
	<string name="sync_state_equals_rest_pending_files_message">Files need to be synched.</string>
	<string name="sync_state_equals_inserting_message">Has never been synched.</string>
	<string name="sync_state_equals_deleting_message">Will be deleted during sync.</string>
	<string name="sync_state_equals_conflicting_message">Conflicts with server version.</string>
	<string name="sync_state_equals_updating_message">New changes will be uploaded.</string>
	<string name="sync_result">Sync Results</string>
	<string name="file_picker_not_found">OI File Manager is missing.\n\nPlease install the OI File Manager application.</string>
	<string name="no_shortcuts">No Shortcuts Defined</string>
	<string name="account">Account:</string>
	<string name="save_settings">Save settings</string>
	<string name="auth_account">Authorize account</string>
	<string name="choose_sync_set">Choose set of tables to sync</string>
	<string name="download_table">Download table from server</string>
	<string name="sync_now">Sync now</string>
	<string name="sync_now_push">Reset App Server</string>
	<string name="sync_now_pull">Sync now</string>
	<string name="sync_files_now">Sync files now</string>
	<string name="server_url">Aggregate URL:</string>
	<string name="default_server_url">http://opendatakit-2.appspot.com</string>
	<string name="save_all">Save All</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="save">Save</string>
	<string name="list_format">List Format</string>
	<string name="sync_no_tables_ready">There are no tables ready to be synched with the server.</string>
	<string name="press_to_add_color_rule">Press + to add a color rule</string>
	<string name="press_to_add_graph">Press + to add a graph.</string>
	<string name="press_to_add_list_view">Press + to add a list view.</string>
	<string name="open_new_spreadsheet">Open New Spreadsheet File</string>
	<string name="no_data">No data</string>
	<string name="no_matching_rows">No rows found.</string>
	<string name="edit">Edit</string>
	<string name="write_access_control_group">Write Access Control Group:</string>
	<string name="read_access_control_group">Read Access Control Group:</string>
	<string name="preferred_view_type">Preferred View Type</string>
	<string name="sms_shortcut_name">Shortcut Name</string>
	<string name="sms_shortcut_input">Shortcut Input</string>
	<string name="sms_shortcut_output">Shortcut Output</string>
	<string name="multiple_choice_options">Multiple Choice Options</string>
	<string name="add_choice">Add Choice</string>
	<string name="no_conflicts">No conflicts.</string>
	<string name="undo">Undo</string>
	<string name="add_rule">Add Rule</string>
	<string name="conditional_colors">Conditional Colors: %1$s</string>
	<string name="pick_foreground_color">Pick a Foreground Color</string>
	<string name="pick_background_color">Pick a Background Color</string>
	<string name="unrecognized_rule">Unrecognized Rule</string>
	<string name="accepted_rule_ops">The accepted operators are: &lt;, &lt;=, =, &gt;, &gt;=</string>
	<string name="sunday_abbrev">SUN</string>
	<string name="monday_abbrev">MON</string>
	<string name="tuesday_abbrev">TUE</string>
	<string name="wednesday_abbrev">WED</string>
	<string name="thursday_abbrev">THU</string>
	<string name="friday_abbrev">FRI</string>
	<string name="saturday_abbrev">SAT</string>
	<string name="black">Black</string>
	<string name="blue">Blue</string>
	<string name="green">Green</string>
	<string name="red">Red</string>
	<string name="yellow">Yellow</string>
	<string name="title_form_id">Form Id</string>
	<string name="title_root_element">Root Element</string>
	<string name="configuring_tables">Configuring ODK Tables</string>
	<string name="processing_file">processing file&#8230;</string>
	<string name="importing_file">Importing file (%1$d of %2$d): %3$s\n(%4$s)</string>
	<string name="bad_config_properties_file">bad config.properties file</string>
	<string name="error">error</string>
	<string name="config_summary">Configuration Summary:</string>
	<string name="table_already_exists">- %1$s already exists.\n\n</string>
	<string name="file_not_found">- File not found: %1$s.\n\n</string>
	<string name="imported_successfully">- %1$s imported successfully\n\n</string>
	<string name="imported_with_errors">- %1$s imported with errors\n\n</string>
	<string name="use_default">Use Default</string>
	<string name="lat_long_not_set">Latitude or longitude columns are not set!</string>
	<string name="list_view_file_not_set">List view file is not set!</string>
	<string name="list_view_file">List View File</string>
	<string name="edit_default_form">Edit Default Form</string>
	<string name="table_manager_title">Table Manager > %1$s</string>
	<string name="manage_property_sets_title">Manage Property Sets > %1$s</string>
		<string name="revert_warning">Revert to default settings? Any modifications you have made will be lost.</string>
	<string name="yes">Yes</string>
	<string name="waiting_auth">Waiting on authentication</string>
	<string name="confirm_change_settings">Confirm Change Settings</string>
	<string name="change_settings_warning">If you change your settings, tables you have synched now may no longer be able to be synched.</string>
	<string name="choose_account">Please choose an account</string>
	<string name="please_wait">Please Wait</string>
	<string name="synchronizing">Synchronizing&#8230;</string>
	<string name="auth_expired">Authorization expired. Please re-authorize account.</string>
	<string name="sync_error">Sync Error</string>
	<string name="sync_table_result_success">Success</string>
	<string name="sync_table_result_failure">Failure</string>
	<string name="sync_table_result_exception">Exception</string>
	<string name="sync_action_message_insert">Insert on Server.</string>
	<string name="sync_action_message_delete">Delete from Server</string>
	<string name="synchronizing_files">Synchronizing files&#8230;</string>
	<string name="save_settings_first">Please save settings first.</string>
	<string name="error_contacting_server">Unable to contact server. Please try again later&#8230;</string>
	<string name="all_tables_downloaded">No tables on server which have not already been downloaded.</string>
	<string name="error_downloading_table">Unable to download table. Please try again later&#8230;</string>
	<string name="downloaded_table">Downloaded %1$s</string>
	<string name="fetching_tables">Getting tables. Please wait&#8230;</string>
	<string name="fetching_this_table">Downloading table %1$s. Please wait&#8230;</string>
	<string name="column_manager">Column Manager</string>
	<string name="add_column">Add New Column</string>
	<string name="name_of_new_column">Name of New Column</string>
	<string name="error_empty_column_name">Column name cannot be empty!</string>
	<string name="error_spaces_column_name">Column name cannot contain spaces!</string>
	<string name="error_display_name_in_use_column_name">Column display name %1$s is already in use!</string>
	<string name="error_in_use_column_name">Column name %1$s is already in use!</string>
	<string name="unset_collection_view_column">Unset as Collection View based on this column</string>
	<string name="set_collection_view_column">Set as Collection View based on this column</string>
	<string name="set_sort_column">Set as Sort Column</string>
	<string name="delete_column">Delete Column</string>
	<string name="info_bar_plain_title">Table: %1$s</string>
	<string name="info_bar_list_title">Table: %1$s (List)</string>
	<string name="info_bar_detail_title">Table: %1$s (Detailed)</string>
	<string name="info_bar_graph_title">Table: %1$s (Graph: %2$s)</string>
	<string name="search">Search</string>
	<string name="view_type">View Type</string>
	<string name="view_type_table">Table</string>
	<string name="view_type_list">List</string>
	<string name="view_type_graph">Graph</string>
	<string name="add_row">Add Row</string>
	<string name="settings">Settings</string>
	<string name="display_prefs">Display Preferences</string>
	<string name="table_props">Table Properties</string>
	<string name="edit_table_props">Edit Table Properties</string>
	<string name="list_view_manager">List View Manager</string>
	<string name="launch_table_manager">Launch Table Manager</string>
	<string name="error_row_not_found">Row ID not found, please edit via Spreadsheet View</string>
	<string name="general_display_preferences">App-Level Preferences</string>
	<string name="font_size">Font Size</string>
	<string name="change_font_size">Change Font Size</string>
	<string name="display_prefs_for">Display Preferences for: %1$s</string>
	<string name="sort_column">Sort Column</string>
	<string name="sort_asc_desc">Sort Order</string>
	<string name="group_by_column">Group By Column</string>
	<string name="edit_rule">Edit Rule</string>
	<string name="compared_to_value">target comparison value</string>
	<string name="error_in_use_list_view_name">List view name %1$s is already in use!</string>
	<string name="add_list_view">Add New List View</string>
	<string name="nth_list_view_title">List View %1$d</string>
	<string name="delete_list_view">Delete this List View</string>
	<string name="edit_list_view">Edit this List View</string>
	<string name="confirm_delete_view_title">Confirm Delete List View</string>
	<string name="are_you_sure_delete_view">Please confirm deletion of list view: %1$s</string>
	<string name="set_as_default_list_view">%1$s is now the default list view.</string>
	<string name="set_as_default_graph_view">%1$s is now the default graph view.</string>
		<string name="no_default_no_changes">There are no default settings! No changes have been made.</string>
	<string name="are_you_sure_save_default_settings">Please confirm saving of these settings as default. Any modifications of the old default settings will be lost.</string>
	<string name="are_you_sure_copy_default_settings_to_server_settings">Please confirm copying of default settings to server sync settings. Settings in the server sync set will be pushed to the server at next sync.</string>
	<string name="are_you_sure_merge_server_settings_into_default_settings">Please confirm merging of server settings into default settings.</string>
	<string name="are_you_sure_write_debug_objects">Do you want to wipe any old debug objects and write new ones to the output directory?</string>
	<string name="take_local">Take Local Version</string>
	<string name="take_server">Take Server Version</string>
	<string name="mark_resolved">Mark Resolved</string>
</resources>